# vcg_simplifier

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  VCGMeshReduction.uplugin  VCGSimplifier.Build.cs  VCGSimplifier.uplugin  server.py  vcpkg.json
Binaries/Win64/: UnrealEditor-Win64-DebugGame.modules  UnrealEditor.modules
Cli/: main.cpp
Private/: VCGMeshReduction.cpp  VCGMeshReduction.h  VCGSimplifierModule.cpp  glb_loader.cpp  main.cpp  simplifier.cpp
Public/: VCGSimplifierModule.h  mymesh.h  simplifier.h
Source/Cli/: obj_loader.cpp
Source/Cli/Private/: glb_loader.cpp
Source/Shared/: simplifier.cpp
Source/VCGMeshReduction/: VCGMeshReduction.Build.cs  VCGMeshReduction.cs
Source/VCGMeshReduction/Private/: VCGMeshReduction.cpp  simplifier.cpp
Source/VCGMeshReduction/Public/: mymesh.h  simplifier.h
Source/VCGSimplifier/: VCGSimplifier.Build.cs
Source/VCGSimplifier/Private/: VCGMeshReduction.cpp  VCGMeshReduction.h  VCGSimplifierModule.cpp
Source/VCGSimplifier/Public/: VCGSimplifierModule.h  simplifier.h
lib/: fast_obj.h  sdefl.h
src/: glb_loader.h  main.cpp  main_glb.cpp  mesh_types.h  nanite.cpp  nanite_api.h  obj_loader.h  simplifier.cpp  simplifier.h
temp_uploads/: a9cad0ee-e01a-4328-bc35-e3aeee5cb4d4_output.glb
templates/: index.html
